# mujoco-mcp

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.cursor/rules/: development-principles.mdc  tests-structure.mdc  type-annotations.mdc  uv-venv.mdc
.github/actions/setup-python-uv/: action.yml
.github/workflows/: pre-commit.yml  tests.yml
examples/: DEMO.md  agno_demo.py  evaluate_directly.py  random_benchmark.py
src/mujoco_mcp/: __init__.py  config.py  image_utils.py  robot.py  server.py
tests/mujoco_mcp/: test_server.py
