[project]
name = "mujoco-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "JC", email = "jccalvojackson@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "loguru>=0.7.3",
    "mcp[cli]>=1.13.1",
    "mujoco>=3.3.5",
    "pillow>=11.3.0",
    "pydantic>=2.11.7",
    "robot-descriptions>=1.20.0",
]

[project.scripts]
mujoco-mcp = "mujoco_mcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
